NXP-33535: cleanup / format